2020-04-09  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-insn.def (pushf): Get a numeric argument.
	* lib/pvm.jitter (pushf): Likewise.
	* lib/pvm.h (pvm_env_new): Get a `hint' argument.
	(pvm_env_push_frame): Likewise.
	* lib/pvm-env.c	(pvm_env_new): Likewise.
	(pvm_env_push_frame): Likewise.
	(pvm_env_register): Allocate new space for entries as needed.
	* lib/pvm.c (pvm_init): Pass a hint to pvm_env_new.
	* lib/pkl-asm.pks: Add hints to pushf instructions.
	* lib/pkl-gen.c: Likewise.
	* lib/pkl-gen.pks: Likewise.

2020-04-09  Tim Rühsen  <tim.ruehsen@gmx.de>

	* lib/pk-utils.h: Add declaration of pk_str_replace.
	* lib/pk-utils.c: Add implementation of pk_str_replace.
	* lib/pkl.c (pkl_resolve_module): Make use of pk_str_replace.

2020-04-09  Tim Rühsen  <tim.ruehsen@gmx.de>

	* lib/pkl.c (pkl_resolve_module): Use non-destructive parsing.

2020-04-09  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Load Path): Mention POKE_LOAD_PATH.

2020-04-09  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl.c (pkl_load): New function.
	(pkl_resolve_module): Likewise.
	* lib/pkl-tab.y (load_module): Use pkl_resolve_module.
	* src/pk-cmd.c (pk_cmd_init): Likewise.
	* src/poke.c (poke_cmdsdir): Remove.
	(initialize): Do not initialize poke_cmdsdir.
	* run.in (POKECMDSDIR): Do not set POKECMDSDIR.

2020-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pvm-val.c (pvm_sizeof): Return zero for type values.

2020-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-asm.c (pkl_asm_insn): Clarify the situation on 32-bit
	and add an assert.

2020-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-diag.h: Really add file in git, grrr.
	* lib/pkl-diag.c: Likewise.

2020-04-08  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/Makefile.am (libpoke_la_SOURCES): Add pkl_diag.h and
	pkl_diag.c.
	* lib/pkl-diag.h: New file.
	(pkl_error): Moved from pkl.h.
	(pkl_warning): Likewise.
	(pkl_ice): Likewise.
	* lib/pkl-diag.c: New file.
	(pkl_detailed_location): Moved from pkl.c.